@@ -1,3 +1,7 @@
+2007-02-15  Darin Adler  <darin@apple.com>
+
+        * projects/performance/index.html: Fix i-Bench link.
+
 2007-02-08  Mark Rowe  <mrowe@apple.com>
 
         Reviewed by Tim Hatcher.
